k8s/ingress/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  namespace: med-erp
spec:
  ingressClassName: nginx
  rules:
  - host:  a69347a89b6bc4e15a9d3c2cb85512b7-80942956.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081

      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081

      - path: /api/v1/products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8082

      - path: /api/v1/orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8083
